tests/code/Report/report-stderr.txt
=== Copy reduced C code for rectangle.whiley ===
=== Naive + deallocated C code for rectangle.whiley ===
=== Naive C code for rectangle.whiley ===
=== Copy reduced + deallocated C code for rectangle.whiley ===
=== Copy reduced C code for swap.whiley ===
=== Naive + deallocated C code for swap.whiley ===
=== Naive C code for swap.whiley ===
=== Copy reduced + deallocated C code for swap.whiley ===
=== Copy reduced C code for reverse.whiley ===
=== Naive + deallocated C code for reverse.whiley ===
=== Naive C code for reverse.whiley ===
=== Copy reduced + deallocated C code for reverse.whiley ===
=== Copy reduced C code for mergesort.whiley ===
=== Naive + deallocated C code for mergesort.whiley ===
=== Naive C code for mergesort.whiley ===
=== Copy reduced + deallocated C code for mergesort.whiley ===
=== Copy reduced C code for bubblesort.whiley ===
=== Naive + deallocated C code for bubblesort.whiley ===
=== Naive C code for bubblesort.whiley ===
=== Copy reduced + deallocated C code for bubblesort.whiley ===
=== Copy reduced C code for newTicTacToe.whiley ===
=== Naive + deallocated C code for newTicTacToe.whiley ===
=== Naive C code for newTicTacToe.whiley ===
=== Copy reduced + deallocated C code for newTicTacToe.whiley ===
=== Copy reduced C code for MatrixMult.whiley ===
=== Naive + deallocated C code for MatrixMult.whiley ===
=== Naive C code for MatrixMult.whiley ===
=== Copy reduced + deallocated C code for MatrixMult.whiley ===
=== Copy reduced C code for factorial.whiley ===
=== Naive + deallocated C code for factorial.whiley ===
=== Naive C code for factorial.whiley ===
=== Copy reduced + deallocated C code for factorial.whiley ===
=== Copy reduced C code for Fibonacci.whiley ===
=== Naive + deallocated C code for Fibonacci.whiley ===
=== Naive C code for Fibonacci.whiley ===
=== Copy reduced + deallocated C code for Fibonacci.whiley ===
=== Copy reduced C code for MatrixMult2.whiley ===
=== Naive + deallocated C code for MatrixMult2.whiley ===
=== Naive C code for MatrixMult2.whiley ===
=== Copy reduced + deallocated C code for MatrixMult2.whiley ===
=== Copy reduced C code for MatrixMult3.whiley ===
=== Naive + deallocated C code for MatrixMult3.whiley ===
=== Naive C code for MatrixMult3.whiley ===
=== Copy reduced + deallocated C code for MatrixMult3.whiley ===
=== Copy reduced C code for gcd.whiley ===
=== Naive + deallocated C code for gcd.whiley ===
=== Naive C code for gcd.whiley ===
=== Copy reduced + deallocated C code for gcd.whiley ===
=== Copy reduced C code for CoinGame.whiley ===
=== Naive + deallocated C code for CoinGame.whiley ===
=== Naive C code for CoinGame.whiley ===
=== Copy reduced + deallocated C code for CoinGame.whiley ===
=== Copy reduced C code for CoinGame1.whiley ===
=== Naive + deallocated C code for CoinGame1.whiley ===
=== Naive C code for CoinGame1.whiley ===
=== Copy reduced + deallocated C code for CoinGame1.whiley ===
=== Copy reduced C code for CoinGame2.whiley ===
=== Naive + deallocated C code for CoinGame2.whiley ===
=== Naive C code for CoinGame2.whiley ===
=== Copy reduced + deallocated C code for CoinGame2.whiley ===
=== Copy reduced C code for CoinGame3.whiley ===
=== Naive + deallocated C code for CoinGame3.whiley ===
=== Naive C code for CoinGame3.whiley ===
=== Copy reduced + deallocated C code for CoinGame3.whiley ===
=== Copy reduced C code for CoinGame4.whiley ===
=== Naive + deallocated C code for CoinGame4.whiley ===
=== Naive C code for CoinGame4.whiley ===
=== Copy reduced + deallocated C code for CoinGame4.whiley ===
=== Copy reduced C code for nqueens.whiley ===
=== Naive + deallocated C code for nqueens.whiley ===
=== Naive C code for nqueens.whiley ===
=== Copy reduced + deallocated C code for nqueens.whiley ===
In file included from nqueens.h:1:0,
                 from nqueens.c:1:
nqueens.c: In function ‘run’:
nqueens.c:314:26: error: ‘p_tmp’ undeclared (first use in this function)
     _CALLER_DEALLOC(_26, p);
                          ^
Util.h:255:12: note: in definition of macro ‘_CALLER_DEALLOC’
    if(a != b##_tmp){\
            ^
nqueens.c:314:26: note: each undeclared identifier is reported only once for each function it appears in
     _CALLER_DEALLOC(_26, p);
                          ^
Util.h:255:12: note: in definition of macro ‘_CALLER_DEALLOC’
    if(a != b##_tmp){\
            ^
=== Copy reduced C code for nqueens2.whiley ===
=== Naive + deallocated C code for nqueens2.whiley ===
=== Naive C code for nqueens2.whiley ===
=== Copy reduced + deallocated C code for nqueens2.whiley ===
In file included from nqueens2.h:1:0,
                 from nqueens2.c:1:
nqueens2.c: In function ‘run’:
nqueens2.c:226:26: error: ‘p_tmp’ undeclared (first use in this function)
     _CALLER_DEALLOC(_21, p);
                          ^
Util.h:255:12: note: in definition of macro ‘_CALLER_DEALLOC’
    if(a != b##_tmp){\
            ^
nqueens2.c:226:26: note: each undeclared identifier is reported only once for each function it appears in
     _CALLER_DEALLOC(_21, p);
                          ^
Util.h:255:12: note: in definition of macro ‘_CALLER_DEALLOC’
    if(a != b##_tmp){\
            ^
=== Copy reduced C code for FunctionCall1.whiley ===
=== Naive + deallocated C code for FunctionCall1.whiley ===
=== Naive C code for FunctionCall1.whiley ===
=== Copy reduced + deallocated C code for FunctionCall1.whiley ===
=== Copy reduced C code for FunctionCall2.whiley ===
=== Naive + deallocated C code for FunctionCall2.whiley ===
=== Naive C code for FunctionCall2.whiley ===
=== Copy reduced + deallocated C code for FunctionCall2.whiley ===
=== Copy reduced C code for FunctionCall3.whiley ===
=== Naive + deallocated C code for FunctionCall3.whiley ===
=== Naive C code for FunctionCall3.whiley ===
=== Copy reduced + deallocated C code for FunctionCall3.whiley ===
=== Copy reduced C code for FunctionCall4.whiley ===
=== Naive + deallocated C code for FunctionCall4.whiley ===
=== Naive C code for FunctionCall4.whiley ===
=== Copy reduced + deallocated C code for FunctionCall4.whiley ===
=== Copy reduced C code for SobelEdgeDetect.whiley ===
=== Naive + deallocated C code for SobelEdgeDetect.whiley ===
=== Naive C code for SobelEdgeDetect.whiley ===
=== Copy reduced + deallocated C code for SobelEdgeDetect.whiley ===
=== Copy reduced C code for SobelEdgeDetect1.whiley ===
=== Naive + deallocated C code for SobelEdgeDetect1.whiley ===
=== Naive C code for SobelEdgeDetect1.whiley ===
=== Copy reduced + deallocated C code for SobelEdgeDetect1.whiley ===
=== Copy reduced C code for SobelEdgeDetect2.whiley ===
=== Naive + deallocated C code for SobelEdgeDetect2.whiley ===
=== Naive C code for SobelEdgeDetect2.whiley ===
=== Copy reduced + deallocated C code for SobelEdgeDetect2.whiley ===
=== Copy reduced C code for rectangle.whiley ===
=== Naive + deallocated C code for rectangle.whiley ===
=== Naive C code for rectangle.whiley ===
=== Copy reduced + deallocated C code for rectangle.whiley ===
=== Copy reduced C code for swap.whiley ===
=== Naive + deallocated C code for swap.whiley ===
=== Naive C code for swap.whiley ===
=== Copy reduced + deallocated C code for swap.whiley ===
=== Copy reduced C code for reverse.whiley ===
=== Naive + deallocated C code for reverse.whiley ===
=== Naive C code for reverse.whiley ===
=== Copy reduced + deallocated C code for reverse.whiley ===
=== Copy reduced C code for mergesort.whiley ===
=== Naive + deallocated C code for mergesort.whiley ===
=== Naive C code for mergesort.whiley ===
=== Copy reduced + deallocated C code for mergesort.whiley ===
=== Copy reduced C code for bubblesort.whiley ===
=== Naive + deallocated C code for bubblesort.whiley ===
=== Naive C code for bubblesort.whiley ===
=== Copy reduced + deallocated C code for bubblesort.whiley ===
=== Copy reduced C code for newTicTacToe.whiley ===
=== Naive + deallocated C code for newTicTacToe.whiley ===
=== Naive C code for newTicTacToe.whiley ===
=== Copy reduced + deallocated C code for newTicTacToe.whiley ===
=== Copy reduced C code for MatrixMult.whiley ===
=== Naive + deallocated C code for MatrixMult.whiley ===
=== Naive C code for MatrixMult.whiley ===
=== Copy reduced + deallocated C code for MatrixMult.whiley ===
=== Copy reduced C code for factorial.whiley ===
=== Naive + deallocated C code for factorial.whiley ===
=== Naive C code for factorial.whiley ===
=== Copy reduced + deallocated C code for factorial.whiley ===
=== Copy reduced C code for Fibonacci.whiley ===
=== Naive + deallocated C code for Fibonacci.whiley ===
=== Naive C code for Fibonacci.whiley ===
=== Copy reduced + deallocated C code for Fibonacci.whiley ===
=== Copy reduced C code for MatrixMult2.whiley ===
=== Naive + deallocated C code for MatrixMult2.whiley ===
=== Naive C code for MatrixMult2.whiley ===
=== Copy reduced + deallocated C code for MatrixMult2.whiley ===
=== Copy reduced C code for MatrixMult3.whiley ===
=== Naive + deallocated C code for MatrixMult3.whiley ===
=== Naive C code for MatrixMult3.whiley ===
=== Copy reduced + deallocated C code for MatrixMult3.whiley ===
=== Copy reduced C code for gcd.whiley ===
=== Naive + deallocated C code for gcd.whiley ===
=== Naive C code for gcd.whiley ===
=== Copy reduced + deallocated C code for gcd.whiley ===
=== Copy reduced C code for CoinGame.whiley ===
=== Naive + deallocated C code for CoinGame.whiley ===
=== Naive C code for CoinGame.whiley ===
=== Copy reduced + deallocated C code for CoinGame.whiley ===
=== Copy reduced C code for CoinGame1.whiley ===
=== Naive + deallocated C code for CoinGame1.whiley ===
=== Naive C code for CoinGame1.whiley ===
=== Copy reduced + deallocated C code for CoinGame1.whiley ===
=== Copy reduced C code for CoinGame2.whiley ===
=== Naive + deallocated C code for CoinGame2.whiley ===
=== Naive C code for CoinGame2.whiley ===
=== Copy reduced + deallocated C code for CoinGame2.whiley ===
=== Copy reduced C code for CoinGame3.whiley ===
=== Naive + deallocated C code for CoinGame3.whiley ===
=== Naive C code for CoinGame3.whiley ===
=== Copy reduced + deallocated C code for CoinGame3.whiley ===
=== Copy reduced C code for CoinGame4.whiley ===
=== Naive + deallocated C code for CoinGame4.whiley ===
=== Naive C code for CoinGame4.whiley ===
=== Copy reduced + deallocated C code for CoinGame4.whiley ===
=== Copy reduced C code for nqueens.whiley ===
=== Naive + deallocated C code for nqueens.whiley ===
=== Naive C code for nqueens.whiley ===
=== Copy reduced + deallocated C code for nqueens.whiley ===
In file included from nqueens.h:1:0,
                 from nqueens.c:1:
nqueens.c: In function ‘run’:
nqueens.c:314:26: error: ‘p_tmp’ undeclared (first use in this function)
     _CALLER_DEALLOC(_26, p);
                          ^
Util.h:255:12: note: in definition of macro ‘_CALLER_DEALLOC’
    if(a != b##_tmp){\
            ^
nqueens.c:314:26: note: each undeclared identifier is reported only once for each function it appears in
     _CALLER_DEALLOC(_26, p);
                          ^
Util.h:255:12: note: in definition of macro ‘_CALLER_DEALLOC’
    if(a != b##_tmp){\
            ^
=== Copy reduced C code for nqueens2.whiley ===
=== Naive + deallocated C code for nqueens2.whiley ===
=== Naive C code for nqueens2.whiley ===
=== Copy reduced + deallocated C code for nqueens2.whiley ===
In file included from nqueens2.h:1:0,
                 from nqueens2.c:1:
nqueens2.c: In function ‘run’:
nqueens2.c:226:26: error: ‘p_tmp’ undeclared (first use in this function)
     _CALLER_DEALLOC(_21, p);
                          ^
Util.h:255:12: note: in definition of macro ‘_CALLER_DEALLOC’
    if(a != b##_tmp){\
            ^
nqueens2.c:226:26: note: each undeclared identifier is reported only once for each function it appears in
     _CALLER_DEALLOC(_21, p);
                          ^
Util.h:255:12: note: in definition of macro ‘_CALLER_DEALLOC’
    if(a != b##_tmp){\
            ^
=== Copy reduced C code for FunctionCall1.whiley ===
=== Naive + deallocated C code for FunctionCall1.whiley ===
=== Naive C code for FunctionCall1.whiley ===
=== Copy reduced + deallocated C code for FunctionCall1.whiley ===
=== Copy reduced C code for FunctionCall2.whiley ===
=== Naive + deallocated C code for FunctionCall2.whiley ===
=== Naive C code for FunctionCall2.whiley ===
=== Copy reduced + deallocated C code for FunctionCall2.whiley ===
=== Copy reduced C code for FunctionCall3.whiley ===
=== Naive + deallocated C code for FunctionCall3.whiley ===
=== Naive C code for FunctionCall3.whiley ===
=== Copy reduced + deallocated C code for FunctionCall3.whiley ===
=== Copy reduced C code for FunctionCall4.whiley ===
=== Naive + deallocated C code for FunctionCall4.whiley ===
=== Naive C code for FunctionCall4.whiley ===
=== Copy reduced + deallocated C code for FunctionCall4.whiley ===
=== Copy reduced C code for SobelEdgeDetect.whiley ===
=== Naive + deallocated C code for SobelEdgeDetect.whiley ===
=== Naive C code for SobelEdgeDetect.whiley ===
=== Copy reduced + deallocated C code for SobelEdgeDetect.whiley ===
=== Copy reduced C code for SobelEdgeDetect1.whiley ===
=== Naive + deallocated C code for SobelEdgeDetect1.whiley ===
=== Naive C code for SobelEdgeDetect1.whiley ===
=== Copy reduced + deallocated C code for SobelEdgeDetect1.whiley ===
=== Copy reduced C code for SobelEdgeDetect2.whiley ===
=== Naive + deallocated C code for SobelEdgeDetect2.whiley ===
=== Naive C code for SobelEdgeDetect2.whiley ===
=== Copy reduced + deallocated C code for SobelEdgeDetect2.whiley ===
